--- a/eyeos-frontend/src/index.scss
+++ b/eyeos-frontend/src/index.scss
@@ -1,8 +1,9 @@
-body {
+@import './styles/colors.scss';
+
+html, body {
+  @extend .bg-main;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'CircularStd';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
