On screen instructions

--- a/eyeos-frontend/src/index.scss
+++ b/eyeos-frontend/src/index.scss
@@ -3,6 +3,7 @@
 html, body {
   @extend .bg-main;
   margin: 0;
+  color: white;
   font-family: 'CircularStd';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
